@@ -28,6 +28,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import jakarta.enterprise.event.Reception;
+import jakarta.enterprise.event.Startup;
 import jakarta.enterprise.inject.spi.DefinitionException;
 import jakarta.enterprise.inject.spi.DeploymentException;
 import jakarta.enterprise.inject.spi.InterceptionType;
@@ -46,6 +47,8 @@ import org.jboss.jandex.Type;
 import org.jboss.logging.Logger;
 import org.jboss.logging.Logger.Level;
 
+import io.quarkus.arc.ClientProxy;
+import io.quarkus.arc.InjectableBean;
 import io.quarkus.arc.processor.BeanDeploymentValidator.ValidationContext;
 import io.quarkus.arc.processor.BeanProcessor.BuildContextImpl;
 import io.quarkus.arc.processor.BeanRegistrar.RegistrationContext;
@@ -56,7 +59,11 @@ import io.quarkus.arc.processor.bcextensions.ExtensionsEntryPoint;
 import io.quarkus.gizmo.ClassTransformer;
 import io.quarkus.gizmo.FieldDescriptor;
 import io.quarkus.gizmo.MethodDescriptor;
+import io.quarkus.gizmo2.Const;
 import io.quarkus.gizmo2.Expr;
+import io.quarkus.gizmo2.LocalVar;
+import io.quarkus.gizmo2.creator.BlockCreator;
+import io.quarkus.gizmo2.desc.MethodDesc;
 
 public class BeanDeployment {
 
@@ -184,18 +191,17 @@ public class BeanDeployment {
         findScopeAnnotations(DotNames.NORMAL_SCOPE, beanDefiningAnnotations);
 
         qualifierNonbindingMembers = new HashMap<>();
-        qualifiers = findQualifiers();
+        qualifiers = findQualifiers(qualifierNonbindingMembers);
         for (QualifierRegistrar registrar : builder.qualifierRegistrars) {
             for (Entry<DotName, Set<String>> entry : registrar.getAdditionalQualifiers().entrySet()) {
                 DotName dotName = entry.getKey();
                 ClassInfo classInfo = getClassByName(getBeanArchiveIndex(), dotName);
                 if (classInfo != null) {
                     Set<String> nonbindingMembers = entry.getValue();
-                    if (nonbindingMembers == null) {
-                        nonbindingMembers = Collections.emptySet();
+                    validateQualifier(classInfo, nonbindingMembers != null ? nonbindingMembers : Set.of());
+                    if (nonbindingMembers != null && !nonbindingMembers.isEmpty()) {
+                        qualifierNonbindingMembers.put(dotName, nonbindingMembers);
                     }
-                    validateQualifier(classInfo, nonbindingMembers);
-                    qualifierNonbindingMembers.put(dotName, nonbindingMembers);
                     qualifiers.put(dotName, classInfo);
                 }
             }
@@ -204,7 +210,7 @@ public class BeanDeployment {
         buildContext.putInternal(Key.QUALIFIERS, Collections.unmodifiableMap(qualifiers));
 
         interceptorNonbindingMembers = new HashMap<>();
-        interceptorBindings = findInterceptorBindings();
+        interceptorBindings = findInterceptorBindings(interceptorNonbindingMembers);
         for (InterceptorBindingRegistrar registrar : builder.interceptorBindingRegistrars) {
             for (InterceptorBindingRegistrar.InterceptorBinding binding : registrar.getAdditionalBindings()) {
                 DotName dotName = binding.getName();
@@ -216,7 +222,9 @@ public class BeanDeployment {
                             nonbinding.add(method.name());
                         }
                     }
-                    interceptorNonbindingMembers.put(dotName, nonbinding);
+                    if (!nonbinding.isEmpty()) {
+                        interceptorNonbindingMembers.put(dotName, nonbinding);
+                    }
                 }
                 interceptorBindings.put(dotName, annotationClass);
             }
@@ -256,7 +264,7 @@ public class BeanDeployment {
         this.jtaCapabilities = builder.jtaCapabilities;
         this.strictCompatibility = builder.strictCompatibility;
         this.alternativePriorities = builder.alternativePriorities;
-        this.invokerFactory = new InvokerFactory(this, injectionPointTransformer);
+        this.invokerFactory = new InvokerFactory(this, injectionPointTransformer, builder.asyncHandlers);
     }
 
     ContextRegistrar.RegistrationContext registerCustomContexts(List<ContextRegistrar> contextRegistrars) {
@@ -601,6 +609,10 @@ public class BeanDeployment {
         return Collections.unmodifiableCollection(interceptorBindings.values());
     }
 
+    Map<DotName, Set<String>> getInterceptorNonbindingMembers() {
+        return interceptorNonbindingMembers;
+    }
+
     public Collection<InjectionPointInfo> getInjectionPoints() {
         return Collections.unmodifiableList(injectionPoints);
     }
@@ -869,7 +881,7 @@ public class BeanDeployment {
         }
     }
 
-    private Map<DotName, ClassInfo> findQualifiers() {
+    private Map<DotName, ClassInfo> findQualifiers(Map<DotName, Set<String>> qualifierNonbindingMembers) {
         Map<DotName, ClassInfo> qualifiers = new HashMap<>();
         for (AnnotationInstance qualifier : beanArchiveImmutableIndex.getAnnotations(DotNames.QUALIFIER)) {
             ClassInfo qualifierClass = qualifier.target().asClass();
@@ -879,25 +891,34 @@ public class BeanDeployment {
             if (isExcluded(qualifierClass)) {
                 continue;
             }
-            // check that all array typed methods are @Nonbinding
-            validateQualifier(qualifierClass, null);
+            Set<String> nonbindingMembers = new HashSet<>();
+            for (MethodInfo member : qualifierClass.methods()) {
+                if (member.hasAnnotation(DotNames.NONBINDING)) {
+                    nonbindingMembers.add(member.name());
+                }
+            }
+            // check that all array-typed and annotation-typed members are `@Nonbinding`
+            validateQualifier(qualifierClass, nonbindingMembers);
+
             qualifiers.put(qualifierClass.name(), qualifierClass);
+            if (!nonbindingMembers.isEmpty()) {
+                qualifierNonbindingMembers.put(qualifierClass.name(), Set.copyOf(nonbindingMembers));
+            }
         }
         return qualifiers;
     }
 
     /**
-     * Validates the qualifier for binding members which are either array or annotation-valued and throws an exception
-     * if any is found.
+     * Validates the qualifier. Throws an exception if any array-valued or annotation-valued binding member exists.
+     * A "binding" member is any member that is <em>not</em> annotated {@code @Nonbinding}.
      *
      * @param qualifierClass class info of the qualifier
-     * @param nonbindingMembers collection of members we consider {@code @Nonbinding} for synthetic qualifier, null otherwise
+     * @param nonbindingMembers non-{@code null} set of members we consider {@code @Nonbinding}
      */
     private void validateQualifier(ClassInfo qualifierClass, Set<String> nonbindingMembers) {
         for (MethodInfo mi : qualifierClass.methods()) {
-            Type returnType = mi.returnType();
-            if ((nonbindingMembers != null && !nonbindingMembers.contains(mi.name()))
-                    || (nonbindingMembers == null && mi.annotation(DotNames.NONBINDING) == null)) {
+            if (!nonbindingMembers.contains(mi.name())) {
+                Type returnType = mi.returnType();
                 String problem = null;
                 if (returnType.kind().equals(Type.Kind.ARRAY)) {
                     problem = "array";
@@ -909,8 +930,7 @@ public class BeanDeployment {
                 }
                 if (problem != null) {
                     throw new DefinitionException("Qualifier annotation '" + qualifierClass + "' contains a member '"
-                            + mi.name()
-                            + "' with " + problem
+                            + mi.name() + "' with " + problem
                             + "-valued return type. All such members have to be annotated with @jakarta.enterprise.util.Nonbinding");
                 }
             }
@@ -930,7 +950,7 @@ public class BeanDeployment {
         return containerAnnotations;
     }
 
-    private Map<DotName, ClassInfo> findInterceptorBindings() {
+    private Map<DotName, ClassInfo> findInterceptorBindings(Map<DotName, Set<String>> interceptorNonbindingMembers) {
         Map<DotName, ClassInfo> bindings = new HashMap<>();
         // Note: doesn't use AnnotationStore, this will operate on classes without applying annotation transformers
         for (AnnotationInstance binding : beanArchiveImmutableIndex.getAnnotations(DotNames.INTERCEPTOR_BINDING)) {
@@ -941,7 +961,17 @@ public class BeanDeployment {
             if (isExcluded(bindingClass)) {
                 continue;
             }
+            Set<String> nonbindingMembers = new HashSet<>();
+            for (MethodInfo member : bindingClass.methods()) {
+                if (member.hasAnnotation(DotNames.NONBINDING)) {
+                    nonbindingMembers.add(member.name());
+                }
+            }
+
             bindings.put(bindingClass.name(), bindingClass);
+            if (!nonbindingMembers.isEmpty()) {
+                interceptorNonbindingMembers.put(bindingClass.name(), Set.copyOf(nonbindingMembers));
+            }
         }
         return bindings;
     }
@@ -1004,15 +1034,20 @@ public class BeanDeployment {
                 }
 
                 boolean isAlternative = false;
-                Integer alternativePriority = null;
+                boolean isReserve = false;
+                Integer priority = null;
                 Set<ScopeInfo> scopes = new HashSet<>();
                 List<AnnotationInstance> bindings = new ArrayList<>();
                 List<AnnotationInstance> parentStereotypes = new ArrayList<>();
                 boolean isNamed = false;
+                boolean isEager = false;
+                boolean isAutoClose = false;
 
                 for (AnnotationInstance annotation : annotationStore.getAnnotations(stereotypeClass)) {
                     if (DotNames.ALTERNATIVE.equals(annotation.name())) {
                         isAlternative = true;
+                    } else if (DotNames.RESERVE.equals(annotation.name())) {
+                        isReserve = true;
                     } else if (interceptorBindings.containsKey(annotation.name())) {
                         bindings.add(annotation);
                     } else if (stereotypeNames.contains(annotation.name())) {
@@ -1025,8 +1060,12 @@ public class BeanDeployment {
                                     "Stereotype must not declare @Named with a non-empty value: " + stereotypeClass);
                         }
                         isNamed = true;
+                    } else if (DotNames.EAGER.equals(annotation.name())) {
+                        isEager = true;
+                    } else if (DotNames.AUTO_CLOSE.equals(annotation.name())) {
+                        isAutoClose = true;
                     } else if (DotNames.PRIORITY.equals(annotation.name())) {
-                        alternativePriority = annotation.value().asInt();
+                        priority = annotation.value().asInt();
                     } else {
                         final ScopeInfo scope = getScope(annotation.name(), customContextScopes);
                         if (scope != null) {
@@ -1034,11 +1073,24 @@ public class BeanDeployment {
                         }
                     }
                 }
-                boolean isAdditionalStereotype = additionalStereotypes.contains(stereotypeName);
+
+                if (isAlternative && isReserve) {
+                    throw new DefinitionException(
+                            "Stereotype must not declare both @Alternative and @Reserve: " + stereotypeClass);
+                }
+
                 final ScopeInfo scope = getValidScope(scopes, stereotypeClass);
+
+                if (isEager && scope != null && !Beans.allowsEager(scope)) {
+                    throw new DefinitionException("Stereotype must not declare @Eager and @" + scope.getDotName()
+                            + ", because eager initialization is not allowed for this scope: " + stereotypeClass);
+                }
+
+                boolean isAdditionalStereotype = additionalStereotypes.contains(stereotypeName);
                 boolean isInherited = stereotypeClass.declaredAnnotation(DotNames.INHERITED) != null;
-                stereotypes.put(stereotypeName, new StereotypeInfo(scope, bindings, isAlternative, alternativePriority,
-                        isNamed, isAdditionalStereotype, stereotypeClass, isInherited, parentStereotypes));
+                stereotypes.put(stereotypeName, new StereotypeInfo(scope, bindings, isAlternative, isReserve,
+                        priority, isNamed, isEager, isAutoClose, isAdditionalStereotype, stereotypeClass, isInherited,
+                        parentStereotypes));
             }
         }
         return stereotypes;
@@ -1604,11 +1656,70 @@ public class BeanDeployment {
             registrar.register(context);
             context.extension = null;
         }
+        registerSyntheticObserversForEagerBeans(context);
         if (buildCompatibleExtensions != null) {
             buildCompatibleExtensions.registerSyntheticObservers(context, applicationClassPredicate);
             buildCompatibleExtensions.runRegistrationAgain(beanArchiveComputingIndex, beans, observers, invokerFactory);
         }
         return context;
+    }
+
+    // see also `io.quarkus.arc.deployment.StartupBuildSteps`
+    private void registerSyntheticObserversForEagerBeans(ObserverRegistrationContextImpl context) {
+        for (BeanInfo btBean : beansView) {
+            if (!btBean.isEager()) {
+                continue;
+            }
+
+            context.configure()
+                    .id(btBean.getIdentifier() + "_EagerInit")
+                    .beanClass(btBean.getBeanClass())
+                    .priority(Integer.MIN_VALUE)
+                    .observedType(Startup.class)
+                    .notify(ng -> {
+                        BlockCreator bc = ng.notifyMethod();
+
+                        // | ArcContainer arc = Arc.container();
+                        LocalVar arc = bc.localVar("arc", bc.invokeStatic(MethodDescs.ARC_REQUIRE_CONTAINER));
+                        // | InjectableBean<Foo> bean = arc.bean("bflmpsvz");
+                        LocalVar rtBean = bc.localVar("bean",
+                                bc.invokeInterface(MethodDescs.ARC_CONTAINER_BEAN, arc, Const.of(btBean.getIdentifier())));
+
+                        // if the [synthetic] bean is not active and is not injected in an always-active bean, skip obtaining the instance
+                        // this means that an inactive bean that is injected into an always-active bean will end up with an error
+                        if (btBean.canBeInactive()) {
+                            boolean isInjectedInAlwaysActiveBean = false;
+                            for (InjectionPointInfo ip : injectionPoints) {
+                                if (btBean.equals(ip.getResolvedBean()) && ip.getTargetBean().isPresent()
+                                        && !ip.getTargetBean().get().canBeInactive()) {
+                                    isInjectedInAlwaysActiveBean = true;
+                                    break;
+                                }
+                            }
+
+                            if (!isInjectedInAlwaysActiveBean) {
+                                // | if (!bean.isActive()) {
+                                // |     return;
+                                // | }
+                                Expr isActive = bc.invokeInterface(
+                                        MethodDesc.of(InjectableBean.class, "isActive", boolean.class), rtBean);
+                                bc.ifNot(isActive, BlockCreator::return_);
+                            }
+                        }
+
+                        // | InstanceHandle<Foo> handle = arc.instance(bean);
+                        Expr instanceHandle = bc.invokeInterface(MethodDescs.ARC_CONTAINER_INSTANCE, arc, rtBean);
+                        // | Foo instance = handle.get();
+                        Expr instance = bc.invokeInterface(MethodDescs.INSTANCE_HANDLE_GET, instanceHandle);
+                        if (btBean.getScope().isNormal()) {
+                            // | ((ClientProxy) instance).arc_contextualInstance();
+                            Expr proxy = bc.cast(instance, ClientProxy.class);
+                            bc.invokeInterface(MethodDescs.CLIENT_PROXY_GET_CONTEXTUAL_INSTANCE, proxy);
+                        }
+                        bc.return_();
+                    })
+                    .done();
+        }
     }
 
     private void addSyntheticBean(BeanInfo bean) {
@@ -1930,36 +2041,23 @@ public class BeanDeployment {
 
     /**
      * Returns the set of names of non-binding annotation members of given interceptor
-     * binding annotation that was registered through {@code InterceptorBindingRegistrar}.
-     * <p>
-     * Does <em>not</em> return non-binding members of interceptor bindings that were
-     * discovered based on the {@code @InterceptorBinding} annotation; in such case,
-     * one has to manually check presence of the {@code @NonBinding} annotation on
-     * the annotation member declaration.
+     * binding annotation.
      *
-     * @param name name of the interceptor binding annotation that was registered through
-     *        {@code InterceptorBindingRegistrar}
-     * @return set of non-binding annotation members of the interceptor binding annotation
+     * @param name name of the interceptor binding annotation
+     * @return set of non-binding annotation members of the interceptor binding annotation, never {@code null}
      */
     public Set<String> getInterceptorNonbindingMembers(DotName name) {
-        return interceptorNonbindingMembers.getOrDefault(name, Collections.emptySet());
+        return interceptorNonbindingMembers.getOrDefault(name, Set.of());
     }
 
     /**
-     * Returns the set of names of non-binding annotation members of given qualifier
-     * annotation that was registered through {@code QualifierRegistrar}.
-     * <p>
-     * Does <em>not</em> return non-binding members of interceptor bindings that were
-     * discovered based on the {@code @Qualifier} annotation; in such case, one has to
-     * manually check presence of the {@code @NonBinding} annotation on the annotation member
-     * declaration.
+     * Returns the set of names of non-binding annotation members of given qualifier annotation.
      *
-     * @param name name of the qualifier annotation that was registered through
-     *        {@code QualifierRegistrar}
-     * @return set of non-binding annotation members of the qualifier annotation
+     * @param name name of the qualifier annotation
+     * @return set of non-binding annotation members of the qualifier annotation, never {@code null}
      */
     public Set<String> getQualifierNonbindingMembers(DotName name) {
-        return qualifierNonbindingMembers.getOrDefault(name, Collections.emptySet());
+        return qualifierNonbindingMembers.getOrDefault(name, Set.of());
     }
 
     /**
